--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -50,13 +50,27 @@ body {
   font-size: 21px;
   padding: 14px 24px;
 }
-
+form.form {
+    margin-bottom: 25px;
+    margin-top: 25px;
+}
+.form input, .form textarea {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
 /* Supporting marketing content */
 .marketing {
   margin: 40px 0;
 }
 .marketing p + h4 {
   margin-top: 28px;
+}
+#add {
+  width: 100px;
+  border-radius: 5px;
+}
+input {
+  width: 30%;
 }
 
 /* Responsive: Portrait tablets and up */
